# zed

./: AGENTS.md  AGENT_CLI.md  AGENT_FIRST_IMPLEMENTATION.md  ARCHITECTURE_MIGRATION.md  CONTEXT_COMPRESSION_TESTING.md  Cargo.toml  HOW_TERMINALS_WORK.md  HOW_TO_FIND_SESSION_BUTTON.md  MEMORY_LEAK_ANALYSIS.md  SESSION_MANAGEMENT_GUIDE.md  TOKEN_CALCULATION_FIX.md  TOKEN_COUNTING_BUG_ANALYSIS.md  debug_zed_compression.py  example_terminal_state.json  extract_thread.py  launch_zed_with_hub.sh  mlcontext.ts  original_zed_behavior.md  prove_original_behavior.py  setup.sh  simple_hub_client.rs  simple_hub_server.rs  terminal_schema.json  test_context.md  test_context_compression.py  test_context_compression.rs  test_hub.sh  test_hub_basic.rs  test_interactive.sh  test_shell_integration.sh  test_terminal.sh  thread.md
.github/: pull_request_template.md
.github/workflows/: nix.yml
.trae/: TODO.md
.trae/documents/: pointer_based_context_manager_architecture.md  pointer_based_context_manager_prd.md
assets/keymaps/: default-macos.json
assets/prompts/: content_prompt.hbs  terminal_assistant_prompt.hbs
assets/settings/: default.json
context-manager/: CONVERSATION_INSIGHTS_APPLIED.md  ContextManager.js  ConversationCompactor.js  DynamicContextManager.js  FileStateManager.js  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE.md  PointerBasedContextManager.js  README.md  SummarizationPrompts.js  TokenCounter.js  TokenCounter.test.js  constants.js  index.js  test-token-calculation.js
crates/activity_indicator/src/: activity_indicator.rs
crates/agent/: AGENT_FIRST_DEMO.md  Cargo.toml
crates/agent/src/: agent.rs  agent_management_panel.rs  agent_panel.rs  agent_session_panel.rs  context.rs  pointer_context_manager.rs  session_manager_ui.rs  thread.rs  thread_store.rs  vertical_session_list.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: active_thread.rs  agent_configuration.rs  agent_diff.rs  agent_item.rs  agent_model_selector.rs  agent_panel.rs  agent_settings_modal.rs  agent_settings_modal_test.rs  agent_ui.rs  buffer_codegen.rs  canvas_pane.rs  context_picker.rs  context_strip.rs  debug.rs  inline_assistant.rs  inline_prompt_editor.rs  language_model_selector.rs  message_editor.rs  profile_selector.rs  terminal_inline_assistant.rs  text_thread_editor.rs  tool_compatibility.rs
crates/ai_onboarding/src/: agent_api_keys_onboarding.rs  ai_onboarding.rs  ai_upsell_card.rs  edit_prediction_onboarding_content.rs  plan_definitions.rs
crates/assistant_context_editor/src/: context_store.rs
crates/assistant_tool/src/: outline.rs
crates/assistant_tools/src/: terminal_tool.rs
crates/cli/src/: cli.rs  main.rs
crates/collab/: seed.default.json
crates/debugger_ui/src/: debugger_panel.rs
crates/edit_prediction_button/src/: edit_prediction_button.rs
crates/editor/src/: editor.rs  items.rs  mouse_context_menu.rs
crates/eval/: Cargo.toml
crates/eval/src/: eval.rs  explorer.html  judge_diff_prompt.hbs  judge_thread_prompt.hbs  tool_metrics.rs
crates/git_ui/src/: git_panel.rs
crates/hub/: Cargo.toml
crates/hub/examples/: simple_cli.rs  simple_server.rs
crates/hub/src/: application.rs  hub.rs
crates/hub_ai/: Cargo.toml
crates/hub_ai/src/: completion.rs  context_analysis.rs  help_generation.rs  hub_ai.rs  suggestions.rs
crates/hub_blocks/: Cargo.toml
crates/hub_blocks/src/: block.rs  block_manager.rs  hub_blocks.rs  interactions.rs  renderers.rs
crates/hub_core/: Cargo.toml
crates/hub_core/src/: blocks.rs  commands.rs  hub_core.rs  settings.rs  types.rs
crates/hub_protocol/: Cargo.toml
crates/hub_protocol/examples/: bare_bones_demo.rs  test_basic.rs
crates/hub_protocol/src/: client.rs  hub_protocol.rs  messages.rs  server.rs  transport.rs
crates/hub_sdk/: Cargo.toml
crates/hub_sdk/src/: client_builder.rs  hub_sdk.rs  macros.rs  testing.rs  ui_components.rs
crates/hub_terminal_engine/: Cargo.toml
crates/hub_terminal_engine/src/: block_terminal.rs  enhanced_terminal.rs  hub_terminal_engine.rs  protocol_integration.rs
crates/icons/src/: icons.rs
crates/inspector_ui/: README.md
crates/language_tools/src/: lsp_tool.rs
crates/onboarding/src/: ai_setup_page.rs  basics_page.rs  editing_page.rs  onboarding.rs  welcome.rs
crates/outline_panel/src/: outline_panel.rs
crates/project/: Cargo.toml
crates/project/src/: terminals.rs
crates/project_panel/: Cargo.toml
crates/project_panel/src/: project_panel.rs
crates/settings_ui/src/: keybindings.rs
crates/task/test_data/: typescript.json
crates/terminal/: Cargo.toml
crates/terminal/benches/: terminal_benchmark.rs
crates/terminal_view/src/: terminal_scrollbar.rs
crates/title_bar/src/: application_menu.rs  collab.rs  platform_title_bar.rs  title_bar.rs
crates/ui/src/: components.rs
crates/vim/: README.md
crates/vim/src/: command.rs
crates/visual_testing/: Cargo.toml
crates/visual_testing/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: dock.rs  hub_block_types.rs  hub_terminal_panel.rs  hub_terminal_panel_old.rs  hub_terminal_panel_tests.rs  navigation_state.rs  pane.rs  status_bar.rs  terminal_semantic_parser.rs  terminal_state.rs  workspace.rs  workspace_settings.rs
crates/workspace/tests/: property_tests.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
docs/: testing-analysis.md
docs/src/: configuring-zed.md  vim.md
docs/testing/: README.md
extensions/: README.md
hub-cli/: Cargo.toml
hub-cli/src/: main.rs
hub-server/: Cargo.toml
hub-server/src/: main.rs
script/: draft-release-notes  get-preview-channel-changes  get-pull-requests-since  get-release-notes-since  randomized-test-ci  randomized-test-minimize  zed-local
script/danger/: pnpm-lock.yaml
script/issue_response/: main.js  pnpm-lock.yaml
script/licenses/: template.md.hbs
script/terms/: terms.json
zed-hub/: README.md  ai-integration.md  architecture.md  block-system.md  ecosystem-strategy.md  protocol-specification.md  restructure-plan.md  sdk-documentation.md  terminal-engine.md  todo.md  ui-components.md
~/.config/zed/: settings.json
(+39 files in other folders)
