[package]
name = "hub_blocks"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "Block-based UI system for The Hub"

[lints]
workspace = true

[lib]
path = "src/hub_blocks.rs"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
ui.workspace = true
serde.workspace = true
serde_derive.workspace = true
schemars.workspace = true
futures.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
hub_core.workspace = true
workspace-hack.workspace = true

[features]
test-support = ["gpui/test-support"]

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }