[package]
name = "hub_protocol"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "Protocol layer for CLI-UI communication in The Hub"

[lints]
workspace = true

[lib]
path = "src/hub_protocol.rs"
doctest = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
futures.workspace = true
tokio.workspace = true
chrono.workspace = true
gpui.workspace = true
uuid.workspace = true
dirs.workspace = true
async-trait.workspace = true
hub_core.workspace = true
workspace-hack.workspace = true

[features]
test-support = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }