[package]
name = "hub_sdk"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
description = "SDK and developer tools for building CLI applications with The Hub"

[lints]
workspace = true

[lib]
path = "src/hub_sdk.rs"
doctest = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
tokio.workspace = true
clap.workspace = true
hub_core.workspace = true
hub_protocol.workspace = true
workspace-hack.workspace = true

[features]
test-support = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }