[package]
name = "visual_testing"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
image = "0.24"
imageproc = "0.23"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
tempfile.workspace = true
